src/test/deca/context/invalid/affect-boolean-float.deca
// Description : 
//	 test affectation boolean <-- float
// Resultats :
//	 8:5: Non compatible assignment of expression
{
	boolean b;
	float f;
	b = f;
}